# arXiv_RSS_Summary

./: LICENSE  README.md  config.yaml  main.py  pyproject.toml  summarize_style.yaml
arxiv_gpt/: mail.py  prompts.py  summarizer.py  utils.py
